# MFEM_ThermalExp

./: .gitignore  CMakeLists.txt
bins/: CMakeLists.txt  main.cpp
src/: DomainLFH1DivIntegrator.cpp  MixedWeakDivergenceIntegrator.cpp
