file(GLOB_RECURSE example_src "*.cpp")
file(GLOB_RECURSE project_src "${PROJECT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE project_includes "${PROJECT_SOURCE_DIR}/include/*.hpp")

set (${PROJECT_NAME}_INCLUDE_DIRS "")
foreach (_incFile ${project_includes})
    get_filename_component(_dir ${_incFile} PATH)
    list (APPEND ${PROJECT_NAME}_INCLUDE_DIRS ${_dir})
endforeach()
list (REMOVE_DUPLICATES ${PROJECT_NAME}_INCLUDE_DIRS)

add_executable(main ${project_src} main.cpp)
target_include_directories(main PRIVATE ${${PROJECT_NAME}_INCLUDE_DIRS})
target_link_directories(main PRIVATE "${MFEM_DIR}/lib" "${HYPRE_DIR}/lib" "${METIS_DIR}/lib" "${PETSC_DIR}/${PETSC_ARCH}/lib")
target_link_libraries(main PRIVATE mfem MPI::MPI_CXX metis petsc HYPRE)
# target_link_options(main PRIVATE "-Wl,-rpath" PRIVATE "${MFEM_DIR}/lib")
# target_link_options(main PRIVATE "-Wl,-rpath" PRIVATE "${HYPRE_DIR}/lib")
# target_link_options(main PRIVATE "-Wl,-rpath" PRIVATE "${METIS_DIR}/lib")
# target_link_options(main PRIVATE "-Wl,-rpath" PRIVATE "${PETSC_DIR}/${PETSC_ARCH}/lib")
